removes isdeleted field
