# registry/app/api/openapi/api.yaml
@@ -2234,9 +2234,6 @@ components:
         deletedAt:
           type: string
           description: Timestamp in milliseconds when the registry was soft-deleted
-        isDeleted:
-          type: boolean
-          description: True if the registry is soft-deleted
       required:
         - type
         - packageType
@@ -2244,7 +2241,6 @@ components:
         - url
         - isPublic
         - uuid
-        - isDeleted
     ClientSetupDetails:
       type: object
       description: Client Setup Details
@@ -2359,9 +2355,6 @@ components:
         deletedAt:
           type: string
           description: Timestamp in milliseconds when the registry was soft-deleted
-        isDeleted:
-          type: boolean
-          description: True if the registry is soft-deleted
       required:
         - name
         - registryIdentifier
@@ -2370,7 +2363,6 @@ components:
         - packageType
         - uuid
         - registryUUID
-        - isDeleted
     RegistryArtifactMetadata:
       type: object
       description: Artifact Metadata
@@ -2407,9 +2399,6 @@ components:
         deletedAt:
           type: string
           description: Timestamp in milliseconds when the registry was soft-deleted
-        isDeleted:
-          type: boolean
-          description: True if the registry is soft-deleted
       required:
         - name
         - registryIdentifier
@@ -2419,7 +2408,6 @@ components:
         - isPublic
         - uuid
         - registryUUID
-        - isDeleted
     ArtifactVersionMetadata:
       type: object
       description: Artifact Version Metadata
@@ -2522,9 +2510,6 @@ components:
         deletedAt:
           type: string
           description: Timestamp in milliseconds when the registry was soft-deleted
-        isDeleted:
-          type: boolean
-          description: True if the registry is soft-deleted
       required:
         - name
         - identifier
@@ -2533,7 +2518,6 @@ components:
         - packageType
         - isPublic
         - uuid
-        - isDeleted
     ArtifactDetail:
       type: object
       description: Artifact Detail
@@ -2923,15 +2907,11 @@ components:
         deletedAt:
           type: string
           description: Timestamp in milliseconds when the registry was soft-deleted
-        isDeleted:
-          type: boolean
-          description: True if the registry is soft-deleted
       required:
         - imageName
         - packageType
         - uuid
         - registryUUID
-        - isDeleted
     ArtifactVersionSummary:
       type: object
       description: Docker Artifact Version Summary
@@ -2955,16 +2935,12 @@ components:
         deletedAt:
           type: string
           description: Timestamp in milliseconds when the registry was soft-deleted
-        isDeleted:
-          type: boolean
-          description: True if the registry is soft-deleted
       required:
         - imageName
         - version
         - packageType
         - uuid
         - registryUUID
-        - isDeleted
     DockerArtifactManifest:
       type: object
       description: Docker Artifact Manifest
