# registry/types/artifact.go
@@ -34,7 +34,6 @@ type Artifact struct {
 	UpdatedBy int64
 	DeletedAt *time.Time
 	DeletedBy *int64
-	IsDeleted bool // Computed field: true if DeletedAt is not nil OR parent image/registry is deleted
 }
 
 type NonOCIArtifactMetadata struct {
