# registry/types/registry.go
@@ -48,7 +48,6 @@ type Registry struct {
 	UpdatedBy       int64
 	DeletedAt       *time.Time
 	DeletedBy       *int64
-	IsDeleted       bool // Computed field: true if DeletedAt is not nil
 	IsPublic        bool
 }
 
